samples/_failures_safe/1761541671_02b541_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d10667fe.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_d10667fe.c:174:35: error: missing terminating " character
  174 |         case TOKEN_NUMBER: return "N
      |                                   ^~
./samples/SAFE/__tmp_d10667fe.c:174:9: error: expected expression at end of input
  174 |         case TOKEN_NUMBER: return "N
      |         ^~~~
./samples/SAFE/__tmp_d10667fe.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d10667fe.c:174:9: error: expected declaration or statement at end of input
